// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should show boiling if above 100 1`] = `
<p>
  The water would boil.
</p>
`;

exports[`should show boiling if at 100 1`] = `
<p>
  The water would boil.
</p>
`;

exports[`should show not boil if NaN 1`] = `
<p>
  The water would not boil.
</p>
`;

exports[`should show not boil if below 20 1`] = `
<p>
  The water would not boil.
</p>
`;

exports[`should show not boil if negative -1000 1`] = `
<p>
  The water would not boil.
</p>
`;

exports[`should show not boil if no input 1`] = `
<p>
  The water would not boil.
</p>
`;
